# neuronpedia

./: CLA.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  np_model_to_hf.json  package-lock.json  package.json
.github/: dependabot.yml  pull_request_template.md
apps/activations/: README.md  pyproject.toml  start.py
apps/activations/neuronpedia_activations/: __init__.py  config.py  model_manager.py  model_patterns.py  server.py
apps/graph/: Dockerfile  README.md  pyproject.toml  start.py
apps/graph/neuronpedia_graph/: crm_backend.py  format_converter.py  server.py
apps/graph/runpod-gemma-2-2b/: rp_handler.py
apps/inference/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  start.py
apps/inference/neuronpedia_inference/: __init__.py  args.py  config.py  nnsight_health.py  sae_manager.py  server.py  shared.py
apps/inference/neuronpedia_inference/endpoints/activation/: all.py  all_batch.py  attention.py  single.py  single_batch.py  source.py  topk_by_token.py  topk_by_token_batch.py
apps/inference/neuronpedia_inference/endpoints/lens/: lens_loader.py  model_specific.py  prompt.py
apps/inference/neuronpedia_inference/endpoints/persona/: __init__.py  monitor.py
apps/inference/neuronpedia_inference/endpoints/persona/data/: .gitkeep
apps/inference/neuronpedia_inference/endpoints/persona/utils/: __init__.py  conversation.py  model_chatspace.py  persona_data.py  spans_chatspace.py
apps/inference/neuronpedia_inference/endpoints/steer/: completion.py  completion_chat.py
apps/inference/neuronpedia_inference/endpoints/util/: sae_topk_by_decoder_cossim.py
apps/inference/neuronpedia_inference/inference_utils/: steering.py  vllm_monitor.py
apps/inference/neuronpedia_inference/runpod_serverless/: .gitignore  Dockerfile  MONITORING.md  README.md  assistant.txt  requirements.txt
apps/inference/neuronpedia_inference/runpod_serverless/data/casperhansen/llama-3.3-70b-instruct-awq/: contrast_vectors.pt
apps/inference/neuronpedia_inference/runpod_serverless/data/casperhansen/llama-3.3-70b-instruct-awq/pca/: roles_layer40-min.pt
apps/inference/neuronpedia_inference/runpod_serverless/scripts/: test_local.py  test_monitor.py
apps/inference/neuronpedia_inference/runpod_serverless/src/: completion_chat.py  handler.py  model.py  utils.py  vllm_monitor.py
apps/inference/neuronpedia_inference/runpod_serverless/src/persona_utils/: __init__.py  analysis.py  conversation.py  model_chatspace.py  persona_data.py  spans_chatspace.py
apps/inference/neuronpedia_inference/saes/: saelens.py
apps/inference/tests/: conftest.py  simple-nnsight-sanity-check.py
apps/inference/tests/integration/: test_activation_all.py  test_activation_single.py  test_activation_topk_by_token.py  test_completion.py  test_completion_chat.py  test_initialize.py  test_lens_prompt_parity.py
apps/inference/tests/unit/: test_all.py  test_config.py  test_request_lock.py  test_single.py
apps/inference/tests/utils/: __init__.py  assertions.py
apps/nla/: .gitignore  README.md  api_demo.ipynb  nla_inference.py  pyproject.toml  server.py
apps/nla/scripts/: oom_stress.py
apps/nla/scripts/benchmark/: lib.py
apps/nla/scripts/quantization/: build_compressed_tensors_reconstructor.py  build_compressed_tensors_source.py  build_compressed_tensors_verbalizer.py
utils/neuronpedia-utils/: README.md  pyproject.toml
utils/neuronpedia-utils/neuronpedia_utils/: batch-autointerp.py  convert-llamascope-arrow-to-neuronpedia-export.py  convert-saedashboard-to-neuronpedia-export.py
utils/neuronpedia-utils/neuronpedia_utils/db_models/: activation.py
utils/neuronpedia-utils/neuronpedia_utils/headvis/: README.md  compute-head-metrics.py  load-head-metrics.py  load-head-sequences.py  model_head_metrics.py  model_head_sequence.py  np_model_to_hf.json  pyproject.toml  run-all-head-metrics.py
utils/neuronpedia-utils/neuronpedia_utils/headvis/head-metrics/: EleutherAI-pythia-70m-deduped-monology-pile-uncopyrighted.json  Qwen-Qwen2.5-7B-Instruct-monology-pile-uncopyrighted.json  Qwen-Qwen3-1.7B-monology-pile-uncopyrighted.json  Qwen-Qwen3-14B-monology-pile-uncopyrighted.json  Qwen-Qwen3-32B-monology-pile-uncopyrighted.json  Qwen-Qwen3-4B-monology-pile-uncopyrighted.json  Qwen-Qwen3-8B-monology-pile-uncopyrighted.json  Qwen-Qwen3.5-0.8B-monology-pile-uncopyrighted.json  Qwen-Qwen3.5-27B-monology-pile-uncopyrighted.json  Qwen-Qwen3.5-2B-Base-monology-pile-uncopyrighted.json  Qwen-Qwen3.5-9B-Base-monology-pile-uncopyrighted.json  allenai-Olmo-3-1025-7B-monology-pile-uncopyrighted.json  allenai-Olmo-3-1125-32B-monology-pile-uncopyrighted.json  google-gemma-2-27b-monology-pile-uncopyrighted.json  google-gemma-2-2b-it-monology-pile-uncopyrighted.json  google-gemma-2-2b-monology-pile-uncopyrighted.json  google-gemma-2-9b-it-monology-pile-uncopyrighted.json  google-gemma-2-9b-monology-pile-uncopyrighted.json  google-gemma-3-12b-it-monology-pile-uncopyrighted.json  google-gemma-3-12b-pt-monology-pile-uncopyrighted.json  google-gemma-3-1b-it-monology-pile-uncopyrighted.json  google-gemma-3-1b-pt-monology-pile-uncopyrighted.json  google-gemma-3-270m-it-monology-pile-uncopyrighted.json  google-gemma-3-270m-monology-pile-uncopyrighted.json  google-gemma-3-27b-it-monology-pile-uncopyrighted.json  google-gemma-3-27b-pt-monology-pile-uncopyrighted.json  google-gemma-3-4b-it-monology-pile-uncopyrighted.json  google-gemma-3-4b-pt-monology-pile-uncopyrighted.json  google-gemma-4-E2B-monology-pile-uncopyrighted.json  google-gemma-4-E4B-monology-pile-uncopyrighted.json  meta-llama-Llama-3.1-8B-Instruct-monology-pile-uncopyrighted.json  meta-llama-Llama-3.1-8B-monology-pile-uncopyrighted.json  meta-llama-Llama-3.3-70B-Instruct-monology-pile-uncopyrighted.json  openai-community-gpt2-monology-pile-uncopyrighted.json  openai-gpt-oss-20b-monology-pile-uncopyrighted.json
utils/neuronpedia-utils/neuronpedia_utils/jlens/: README.md  fit_lens.py  pyproject.toml  run-all-fit-lens.py
utils/neuronpedia-utils/neuronpedia_utils/jlens/jlens/: __init__.py  _logging.py  fitting.py  hf.py  hooks.py  lens.py  protocol.py
(+457 files in other folders)
