[project]
name = "neuronpedia-graph"
version = "0.1.0"
description = "Based on Circuit Tracer by Piotrowski & Hanna. Server for generating and pruning circuit graphs from prompts."
authors = [{ name = "Johnny Lin", email = "johnny@neuronpedia.org" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.12",
  "uvicorn[standard]>=0.34.2",
  "pydantic>=2.11.4",
  "torch>=2.11.0",
  "transformers>=4.57.1",
  "circuit-tracer",
  "python-dotenv>=1.1.0,<2",
  "hf-transfer>=0.1.9,<0.2",
]

[project.optional-dependencies]
crm = ["llamascopium"]

[tool.uv]
# This is an application, not a distributable package (was poetry's
# `package-mode = false`), so uv installs the dependencies but not the project.
package = false

[tool.uv.sources]
circuit-tracer = { git = "https://github.com/decoderesearch/circuit-tracer.git", tag = "v0.4.1" }
llamascopium = { git = "https://github.com/OpenMOSS/Language-Model-SAEs.git", tag = "v2.0.0b34" }
