[project]
name = "neuronpedia-inference"
version = "1.0.0"
description = "Inference server for Neuronpedia. A more human+AI assisted refactor is probably a good idea."
authors = [{ name = "johnny", email = "johnny@neuronpedia.org" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "python-dotenv>=1.0.1,<2",
  "numpy>=1.24,<2",
  "psutil>=5.9.8,<6",
  # copied from transformer-lens
  # We can use any torch version on Linux (e.g colab)
  "torch>=1.10; sys_platform == 'linux'",
  # Pin >=2.1.1 on Apple devices due to known MPS errors on 2.1.0
  "torch>=1.10,!=2.0,!=2.1.0; sys_platform != 'linux'",
  "transformer-lens",
  "transformers>=4.57.1,<5",
  "einops>=0.7.0,<0.8",
  "pytest>=8.1.1,<9",
  "huggingface-hub>=0.36.0,<0.37",
  "huggingface>=0.0.1,<0.0.2",
  "pandas>=2.2.2,<3",
  "sae-lens>=6.30.0,<7",
  "fastapi>=0.115.6,<0.116",
  "uvicorn>=0.34.0,<0.35",
  "sentry-sdk[fastapi]>=2.20.0,<3",
  "nnsight>=0.6.0",
  "hf-transfer>=0.1.9,<0.2",
  "nnterp>=1.3.0,<2",
  "neuronpedia-inference-client",
  "steerllm",
  "chatspace",
]

[dependency-groups]
dev = [
  # "line-profiler>=4.1.3,<5",
  "pytest>=8.3.1,<9",
  "httpx>=0.28.0,<0.29",
  "coverage>=7.6.0,<8",
  "ruff>=0.7.4,<0.8",
  "pyright>=1.1.351,<2",
  "pytest-cov>=6.0.0,<7",
]

[tool.uv]
# This is an application, not a distributable package (was poetry's
# `package-mode = false`), so uv installs the dependencies but not the project.
package = false

[tool.uv.sources]
transformer-lens = { git = "https://github.com/hijohnnylin/TransformerLens.git", branch = "temp_branch_version" }
neuronpedia-inference-client = { path = "../../packages/python/neuronpedia-inference-client" }
# steerllm must match the (non-editable) source declared in vendor/chatspace's
# own pyproject.toml, otherwise uv reports a conflicting-URL error.
steerllm = { path = "vendor/chatspace/steerllm" }
chatspace = { path = "vendor/chatspace", editable = true }

[tool.ruff.lint]
exclude = ["*.ipynb"]
ignore = ["E203", "E501", "E731", "F722", "E741", "F821", "F403", "ARG002"]
select = ["UP", "TID", "I", "F", "E", "ARG", "SIM", "RET", "LOG", "T20"]

[tool.ruff.lint.per-file-ignores]
"neuronpedia_inference/sae_manager.py" = ["T20"]
"neuronpedia_inference/args.py" = ["T20"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Union".msg = "Use `|` instead"
"typing.Optional".msg = "Use `| None` instead"
"typing.Dict".msg = "Use `dict` instead"
"typing.List".msg = "Use `list` instead"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUntypedFunctionDecorator = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryComparison = "none"
reportConstantRedefinition = "none"
reportUnknownLambdaType = "none"
reportUnknownParameterType = "none"
reportPrivateUsage = "none"
