[tool.poetry]
name = "neuronpedia-utils"
version = "1.0.0"
description = "Neuronpedia utils - for running batch jobs like auto-interp, exporting data, etc."
authors = ["Neuronpedia <johnny@neuronpedia.org>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = {version = "^0.12.0"}
sae-dashboard = "^0.6.8"
cuid2 = "^2.0.0"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
automated-interpretability = "^0.0.18"
openai = "^1.63.2"
google-genai = "^1.57.0"
boto3 = "^1.35.0"

[tool.poetry.group.dev.dependencies]
line-profiler = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 